--- a/descripcion.html
+++ b/descripcion.html
@@ -12,26 +12,20 @@
 <body>
     <header class="container header">
         <div class="logo">
-            <a class="logo__link" href="./index.html">
+            <a class="logo__link" href="#">
                 <img src="./img/logo-geek.png" alt="logo-geek">
-                Alura <span>Geek</span>
+                <span class="logo-azul">Alura</span><span>Geek</span>
             </a>
             <div class="buscador">
-                <input class="buscador__input" type="text" placeholder="Que desea buscar?">
-                <button class="buscador__button">
-                    <img src="./img/lupa-buscador.png" alt="lupa-buscador">
-                </button>
+                <input class="buscador__input" id="buscador" type="text" placeholder="Que desea buscar?">
+
             </div>
         </div>
-        <button class="button button__login button__login--active">
+        <a href="./home-login.html" class="button__login">
             Login
-        </button>
-        <button class="buscador__button buscador__button--active">
-            <img src="./img/lupa-buscador.png" alt="lupa-buscador">
-        </button>
+        </a>
 
     </header>
-
     <main>
         <section class="container section">
             <div class="informacio-producto">
@@ -188,8 +182,8 @@
         </section>
     </main>
     <footer class="footer">
-        <p>Desarrollado por Carlos Alvarado</p>
-        <p>2022</p>
+        <p>Copyright © 2023 Creado por Felipe Alejandro Rodriguez</p>
+
     </footer>
     <!-- ionicons -->
 
