--- a/home-login.html
+++ b/home-login.html
@@ -6,29 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
     <title>Alura Geek</title>
 </head>
 
 <body>
     <header class="container header">
         <div class="logo">
-            <a class="logo__link" href="./index.html">
+            <a class="logo__link" href="#">
                 <img src="./img/logo-geek.png" alt="logo-geek">
-                Alura <span>Geek</span>
+                <span class="logo-azul">Alura</span><span>Geek</span>
             </a>
             <div class="buscador">
-                <input class="buscador__input" type="text" placeholder="Que desea buscar?">
-                <button class="buscador__button">
-                    <img src="./img/lupa-buscador.png" alt="lupa-buscador">
-                </button>
+                <input class="buscador__input" id="buscador" type="text" placeholder="Que desea buscar?">
+
             </div>
         </div>
-        <button class="button button__login button__login--active">
+        <a href="./home-login.html" class="button__login">
             Login
-        </button>
-        <button class="buscador__button buscador__button--active">
-            <img src="./img/lupa-buscador.png" alt="lupa-buscador">
-        </button>
+        </a>
 
     </header>
 
@@ -79,8 +77,8 @@
         </section>
     </main>
     <footer class="footer">
-        <p>Desarrollado por Carlos Alvarado</p>
-        <p>2022</p>
+        <p>Copyright © 2023 Creado por Felipe Alejandro Rodriguez</p>
+
     </footer>
     <script src="./validations/loginValidations.js"></script>
 </body>
