--- a/home-login.html
+++ b/home-login.html
@@ -15,7 +15,7 @@
 <body>
     <header class="container header">
         <div class="logo">
-            <a class="logo__link" href="#">
+            <a class="logo__link" href="#index.html">
                 <img src="./img/logo-geek.png" alt="logo-geek">
                 <span class="logo-azul">Alura</span><span>Geek</span>
             </a>
