--- a/productos.html
+++ b/productos.html
@@ -12,7 +12,7 @@
 <body>
     <header class="container header">
         <div class="logo">
-            <a class="logo__link" href="#index.html">
+            <a class="logo__link" href="index.html">
                 <img src="./img/logo-geek.png" alt="logo-geek">
                 <span class="logo-azul">Alura</span><span>Geek</span>
             </a>
@@ -148,9 +148,9 @@
         </section>
         <section class="contacto-fondo">
             <div class="container contacto">
-                <a class="logo__link logo__link--formulario" href="#">
+                <a class="logo__link logo__link--formulario" href="index.html">
                     <img src="./img/logo-geek.png" alt="logo-geek">
-                    Alura <span>Geek</span>
+                    <span class="logo-azul">Alura</span><span>Geek</span>
                 </a>
                 <ul class="contacto__links">
                     <li><a href="#">Quienes somos</a></li>
